# 2mygit

./: CMakeLists.txt  add_newwindow.cpp  add_newwindow.h  add_newwindow.ui  address_factor.cpp  address_factor.h  addressbook_func.cpp  addressbook_func.h  edit_newwindow.cpp  edit_newwindow.h  edit_newwindow.ui  fix_newwindow.cpp  fix_newwindow.h  fix_newwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
